--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<main>
 		<div class="header">
-			<img src="logo.png">
+			<img src="img/logo.png">
 		</div>
 		<div class="content">
 			<div id="bigCircle">
@@ -63,16 +63,16 @@
 		<footer>
 			<div class="icons">
 				<a href="#">
-					<img src="ic-1.png">
+					<img src="img/ic-1.png">
 					</a>
 					<a href="#">
-					<img src="ic-2.png">
+					<img src="img/ic-2.png">
 					</a>
 					<a href="#">
-					<img src="ic-3.png">
+					<img src="img/ic-3.png">
 					</a>
 					<a href="#">
-					<img src="ic-4.png">
+					<img src="img/ic-4.png">
 					</a>
 					</div>
 			<p class="copyright">2022 Georgian Technical University</p>
